<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/textView3"
            style="@style/Widget.TipTime.TextViewHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/ic_store"
            app:layout_constraintBottom_toBottomOf="@+id/costOfService"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/costOfService"
            app:srcCompat="@drawable/ic_store"
            tools:ignore="MissingConstraints" />

        <!--            style="Widget.TipTime.TextInputLayout"-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/costOfService"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:hint="@string/cost_of_service"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColorHint="@color/gray"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--    <EditText-->
        <!--        android:id="@+id/costOfService"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_marginStart="16dp"-->
        <!--        android:layout_marginTop="24dp"-->
        <!--        android:autofillHints=""-->
        <!--        android:ems="7"-->
        <!--        android:hint="@string/cost_of_service"-->
        <!--        android:inputType="numberDecimal"-->
        <!--        android:textColorHint="#757575"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/textView3" />-->


        <TextView
            android:id="@+id/textView4"
            style="@style/Widget.TipTime.TextViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/how_was_the_service"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/costOfService" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/ic_service"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:srcCompat="@drawable/ic_service"
            tools:ignore="MissingConstraints" />

        <RadioGroup
            android:id="@+id/tipOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checkedButton="@id/option_twenty_percent"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <RadioButton
                android:id="@+id/option_twenty_percent"
                style="@style/Widget.TipTime.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazing_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <RadioButton
                android:id="@+id/option_eighteen_percent"
                style="@style/Widget.TipTime.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/option_twenty_percent" />

            <RadioButton
                android:id="@+id/option_fifteen_percent"
                style="@style/Widget.TipTime.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/option_eighteen_percent" />

        </RadioGroup>


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/ic_round_up"
            app:layout_constraintBottom_toBottomOf="@+id/round_up_switch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/round_up_switch"
            app:srcCompat="@drawable/ic_round_up"
            tools:ignore="MissingConstraints" />

        <!--        style="@style/Widget.TipTime.TextViewTitle"-->
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_up_switch"
            style="@style/Widget.TipTime.CompoundButton.Switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:checked="true"
            android:text="@string/round_up_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/tipOptions" />

        <!--    <Switch-->
        <!--        android:id="@+id/round_up_switch"-->
        <!--        android:layout_width="fill_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_marginStart="20dp"-->
        <!--        android:layout_marginEnd="20dp"-->
        <!--        android:checked="true"-->
        <!--        android:text="@string/round_up_tip"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/tipOptions"-->
        <!--        tools:ignore="UseSwitchCompatOrMaterialXml" />-->

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/calculete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/round_up_switch"
            app:layout_constraintTop_toBottomOf="@+id/round_up_switch"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/tipResult"
            style="@style/Widget.TipTime.TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculateButton"
            tools:text="Tip Amount: $10" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>